# abhyasa

dnn_robotics/: LittSurvey.md
elixir/cli_json/: README.md  mix.exs
elm/basic_add_app/: Readme.md
euler_project/: euler_208.go  euler_208_1.go  euler_208_final.go  euler_666.ipynb  euler_666.py
go/: bin_tree.go  chan_in_struct.go  convert_query_params_to_go_struct.go  decorator.go  go.mod  go_list.go  hello.go  interface_example.go  rand_gen.go
go/context/: context1.go  context2.go  context_value.go
go/drop_time_code/: Readme.md  drop_tc.go
go/go_wasm/: Readme.md
go/grpc_linkerd/: build.sh  go.mod  greeter_deploy.yaml  greeter_server.go
go/intset_app/: Readme.md  intset_app.go
go/json/: .unmarshall.go.swp  marshal.go  unmarshall.go
go/mempool/: Readme.md  mempool_test.go
go/pipe/: pipe_example_1.go
go/producer_consumer/: main.go
go/rabbit_mq/: Readme.md  consumer.go  go.mod  producer.go
go/try_decorator/: try_decorator.go
prolog/: addlists.pl  children.pl  cli_example.pl  date_time.pl  family.pl  misc.pl  mod_num.pl  playout.pl  playout.plt  sb_date_time.pl  scratch.pl  splitlist.pl  stocks.pl
python/decorators/: retry.py
python/mypyapp/: Readme.md  pyproject.toml  setup.py
python/pandas/: .histo.py.swp  histo.py
python/sentence_distance/: sentence_distance.py
rust/simple_cli/: Cargo.toml  Readme.md
rust/simple_cli/src/: box.rs  file_main.rs  json_reader.rs  lib.rs  linked_list.rs  rand_transpose.rs
rust/simple_cli/src/dp/: egg_drops.rs  longest_incresing_subsequence.rs  mod.rs
thetvdb/: create_metadata.py
(+15 files in other folders)
