[package]
name = "simple_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
rand = "*" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name="file_exp"
path="src/file_main.rs"

[[bin]]
name="rtrans"
path="src/rand_transpose.rs"

[[bin]]
name="jsoneg"
path="src/json_reader.rs"

[[bin]]
name="ll"
path="src/linked_list.rs"

[[bin]]
name="box"
path="src/box.rs"